deployment.yml
kind: Deployment
apiVersion: apps/v1beta2
metadata:
  name: registry2
spec:
  replicas: 1
  selector:
    matchLabels:
      component: registry2
  template:
    metadata:
      labels:
        component: registry2
    spec:
      imagePullSecrets:
        -
          name: pull-secret
      hostNetwork: false
      containers:
        -
          name: registry2
          image: 'resin/resin-registry2:VERSION'
          imagePullPolicy: Always
          ports:
            -
              name: defaultport
              containerPort: 80
          volumeMounts:
            -
              name: cgroup
              mountPath: /sys/fs/cgroup
          securityContext:
            capabilities:
              add:
                - SYS_RESOURCE
      volumes:
        -
          name: cgroup
          hostPath:
            path: /sys/fs/cgroup
